{{$NEXT}}

2.000     Dec 03 2010

    * Major refactor and update from 1.2 for CPAN release (Robert Norris)